grid spacing is solved

--- a/T3 Case Problem 2 Costume Expressions/ce_grids.css
+++ b/T3 Case Problem 2 Costume Expressions/ce_grids.css
@@ -47,4 +47,8 @@ div.column80 {width: 80%;}
 
 
 /* Grid Spacing Styles */
-container, row, .column, .cell, div.a, div.cell
+div.container, div.row,  div[class^='column'], div.cell, div.cell a{
+  -webkit-box-sizing: border-box ;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
